web/wp-content/themes/cncf-twenty-two/source/scss/components/_posts.scss
.news-item-vertical {
	background: $white;
	font-weight: 700;
	filter: drop-shadow(0px 2px 5px rgba(0, 0, 0, 0.1));
	display: flex;
	flex-direction: column;
	border-radius: 3px;
	&__image {
		max-height: unset;
		width: 100%;
		object-fit: cover;
		border-top-left-radius: 3px;
		border-top-right-radius: 3px;
		aspect-ratio: 40/21;
	}
	&__title {
		font-size: 20px;
		line-height: 140%;
		margin-bottom: 40px;
		padding-left: 25px;
		padding-top: 25px;
		padding-right: 40px;
	}
	&__link {
		color: $black;
	}
	&__date {
		font-size: 12px;
		line-height: 140%;
		color: $gray-700;
		margin-top: auto;
		padding-left: 25px;
		padding-bottom: 25px;
		padding-right: 40px;
	}
	&__media-image-wrapper {
		aspect-ratio: 40/21;
		display: flex;
		align-items: center;
		align-content: center;
		justify-content: center;
	}
	&.in-the-news-item {
		.news-item-vertical__image {
			width: 80%;
			height: 90%;
			object-fit: contain;
		}
	}
}

.is-sticky-news {
	position: relative;
}

.sticky-news-tag {
	width: 90px;
	height: 24px;
	display: grid;
	justify-content: center;
	align-content: center;
	background-image: url("data:image/svg+xml,%3Csvg width='90' height='25' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 .027h85a5 5 0 0 1 5 5v19H10.549a5 5 0 0 1-4.813-3.643L0 .027Z' fill='%23000' fill-opacity='.6'/%3E%3C/svg%3E");
	background-repeat: no-repeat;
	// font.
	color: $white;
	text-transform: uppercase;
	font-size: 10px;
	font-weight: 700;
	line-height: 100%;
	// position.
	position: absolute;
	right: 0;
	top: 0;
	padding-left: 5px;
	@media (min-width: 1200px) {
		top: 10px;
	}
	z-index: 1;
}

.post-archive {
	// Hide the first divider line.
	.columns-one .wp-block-separator:first-child {
		display: none;
	}
	&__item {
		display: flex;
		flex-direction: column;
		.post-archive__image {
			object-fit: cover;
			width: 100%;
			height: 100.1%;
			aspect-ratio: 40/21;
		}
		@media (min-width: 1000px) {
			flex-direction: row;
			align-items: center;
			.post-archive__image-wrapper {
				margin-right: 40px;
				flex-basis: 325px;
				flex-grow: 0;
				flex-shrink: 0;
			}
			.post-archive__image {
				height: auto;
				min-height: 175px;
			}
			&.is-featured-item {
				.post-archive__image-wrapper {
					flex-basis: 500px;
					max-width: 690px;
					min-width: 300px;
				}
				.post-archive__title {
					font-size: 30px;
					line-height: 150%;
					margin-top: 25px;
					margin-bottom: 15px;
				}
				.post-archive__item_date {
					margin-top: 35px;
				}
			}
		}
		@media (min-width: 1200px) {
			.post-archive__image-wrapper {
				margin-right: 60px;
				flex-basis: 390px;
			}
			&.is-featured-item {
				.post-archive__image-wrapper {
					margin-right: 70px;
					flex-basis: 690px;
				}
			}
		}
		&.in-the-news-item {
			.post-archive__link {
				background-color: $white;
				border: 1px solid $black;
				display: flex;
				align-items: center;
				justify-content: center;
				height: 175px;
				margin-bottom: 20px;
				@media (min-width: 1000px) {
					margin-bottom: 0;
					height: auto;
					min-height: 175px;
					margin-right: 40px;
					flex-basis: 325px;
					flex-grow: 0;
					flex-shrink: 0;
				}
			}
			.post-archive__item_date {
				margin-top: 0px;
				margin-bottom: 10px;
			}
			.post-archive__image {
				width: 80%;
				height: 90%;
				object-fit: contain;
				filter: none;

				@media (min-width: 768px) {
					height: 180px;
					padding: 1rem 0;
				}
			}
		}
	}
	&__link {
		display: block;
	}
	&__image {
		border-radius: 3px;
		filter: drop-shadow(0px 2px 10px rgba(0, 0, 0, 0.1));
		@media (max-width: 999px) {
			margin-bottom: 20px;
		}
	}
	&__text-wrapper {
		display: flex;
		flex-direction: column;
	}
	&__title {
		font-weight: 700;
		font-size: 20px;
		line-height: 140%;
		margin-top: 18px;
		margin-bottom: 16px;
		@media (min-width: 1200px) {
			font-size: 24px;
		}
		a {
			color: $black;
		}
	}
	&__item_date {
		margin-top: 20px;
		font-size: 10px;
		@media (min-width: 1200px) {
			font-size: 12px;
		}
		line-height: 140%;
		font-weight: 700;
		color: $gray-700;
	}
	&__excerpt {
		line-height: 170%;
	}
}

